# funocaml-2025-llm

./: .gitignore  README.md  dune-project
01_tokenizer_dataset/: README.md  solution.ml
02_train/: README.md  dune  solution.ml
03_sample/: README.md  dune  solution.ml
04_transformer/: README.md  solution.ml
